# EARLI

./: .gitignore  Dockerfile  Example.ipynb  ExampleTrain.ipynb  ExampleTrain_PDPTW.ipynb  ExampleTrain_VRPTW.ipynb  HYBRID_PIPELINE_USAGE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_VRPTW.md  README.md  VRPTW_DATA_GENERATION.md  config.yaml  config_cuopt.yaml  config_infer_vrptw_homberger.yaml  config_infer_vrptw_homberger_hybrid.yaml  config_infer_vrptw_homberger_tree_based.yaml  config_initialization.yaml  config_initialization_vrptw_homberger.yaml  config_initialization_vrptw_homberger_hybrid.yaml  config_initialization_vrptw_homberger_tree_based.yaml  config_pdptw.yaml  config_pdptw_compare_1000.yaml  config_pdptw_cuopt.yaml  config_pdptw_cuopt_1000.yaml  config_pdptw_infer_1000_ppo.yaml  config_pdptw_infer_1000_tree.yaml  config_pdptw_ppo_train.yaml  config_pdptw_ppo_train_mixed.yaml  config_pdptw_test_1000.yaml  config_pdptw_train.yaml  config_pdptw_train_mixed.yaml  config_test.yaml  config_train.yaml  config_train_pomo_tw.yaml  config_train_vrptw_homberger.yaml  config_train_vrptw_homberger_tree_based.yaml  config_train_vrptw_synthetic_curriculum.yaml  config_train_vrptw_synthetic_curriculum_hybrid.yaml  config_vrptw.yaml  config_vrptw_compare_1000.yaml  (+27 more)
datasets/: README.md
earli/: benchmark_parser.py  buffer.py  cuopt_injection_vrptw.py  download_data.py  evaluator.py  generate_data.py  main.py  pdptw.py  pomo_tw_utils.py  search_tree.py  self_play.py  synthetic_data_sampler.py  test_injection.py  train.py  unified_logger.py  vehicle_routing.py  vrp.py  vrptw.py
(+36 files in other folders)
